tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/enum.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      enum-region: 'ap-south-1'
    }
  }
}
